syntax = "proto3";

package resources.internet;

import "buf/validate/validate.proto";
import "resources/file/file.proto";
import "resources/timestamp/timestamp.proto";
import "tagger/tagger.proto";

option go_package = "github.com/fivenet-app/fivenet/v2025/gen/go/proto/resources/internet;internet";

enum AdType {
  AD_TYPE_UNSPECIFIED = 0;
  AD_TYPE_SPONSORED = 1;
  AD_TYPE_SEARCH_RESULT = 2;
  AD_TYPE_CONTENT_MAIN = 3;
  AD_TYPE_CONTENT_ASIDE = 4;
}

message Ad {
  uint64 id = 1 [(tagger.tags) = "sql:\"primary_key\" alias:\"id\""];
  resources.timestamp.Timestamp created_at = 2;
  optional resources.timestamp.Timestamp updated_at = 3;
  optional resources.timestamp.Timestamp deleted_at = 4;
  bool disabled = 5;
  AdType ad_type = 6 [(buf.validate.field).enum.defined_only = true];
  optional resources.timestamp.Timestamp starts_at = 7;
  optional resources.timestamp.Timestamp ends_at = 8;
  // @sanitize: method=StripTags
  string title = 9 [(buf.validate.field).string = {
    min_len: 3
    max_len: 255
  }];
  // @sanitize: method=StripTags
  string description = 10 [(buf.validate.field).string = {
    min_len: 3
    max_len: 1024
  }];
  optional resources.file.File image = 11;
  optional int32 approver_id = 12;
  optional string approver_job = 13;
  optional int32 creator_id = 14;
  optional string creator_job = 15;
}
