syntax = "proto3";

package resources.qualifications;

import "buf/validate/validate.proto";
import "resources/timestamp/timestamp.proto";
import "tagger/tagger.proto";

option go_package = "github.com/fivenet-app/fivenet/v2025/gen/go/proto/resources/qualifications;qualifications";

enum AccessLevel {
  ACCESS_LEVEL_UNSPECIFIED = 0;
  ACCESS_LEVEL_BLOCKED = 1;
  ACCESS_LEVEL_VIEW = 2;
  ACCESS_LEVEL_REQUEST = 3;
  ACCESS_LEVEL_TAKE = 4;
  ACCESS_LEVEL_GRADE = 5;
  ACCESS_LEVEL_EDIT = 6;
}

message QualificationAccess {
  repeated QualificationJobAccess jobs = 1;
}

message QualificationJobAccess {
  int64 id = 1 [(tagger.tags) = "sql:\"primary_key\" alias:\"id\""];
  optional resources.timestamp.Timestamp created_at = 2;
  int64 target_id = 4;
  string job = 5 [(buf.validate.field).string.max_len = 20];
  optional string job_label = 6 [(buf.validate.field).string.max_len = 50];
  int32 minimum_grade = 7 [(buf.validate.field).int32.gte = 0];
  optional string job_grade_label = 8 [(buf.validate.field).string.max_len = 50];
  AccessLevel access = 9 [(buf.validate.field).enum.defined_only = true];
}

// Dummy - DO NOT USE!
message QualificationUserAccess {}
